<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="mx.dees.gopiemex.activities.ActivateActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/nb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/header_gopie"
                android:src="@drawable/top_app_daypass" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/lblMsg1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/msg1"
                android:textSize="24sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/lblMsg2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/msg2"
                android:gravity="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/lblToken"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="token"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/lblGoodsList"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/lblGoodsListName"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/lblGoodsListPrice"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/lblGoodsListCode"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/lblUserCode"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/lblUserId"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/lblStreamNo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="invisible" />

            <Spinner
                android:id="@+id/spinGoods"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="invisible"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />
            <Button
                android:id="@+id/btnPaymentToken"
                android:layout_width="200dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:background="@color/color1"
                android:onClick="btnPaymentToken"
                android:text="buy more"
                android:visibility="invisible"/>
            <TextView
                android:id="@+id/lblRe"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textColor="@color/colorAccent"
                android:visibility="invisible" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">
                <Button
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:visibility="invisible"/>
                <Button
                    android:id="@+id/btnGood1"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:onClick="btnGood1"
                    android:background="@drawable/goods_button"
                     />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:visibility="invisible"/>
                <Button
                    android:id="@+id/btnGood2"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="3"
                    android:elevation="10dp"
                    android:gravity="center"
                    android:onClick="btnGood2"
                    android:background="@drawable/goods_button"
                    />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:visibility="invisible"/>
            </LinearLayout>

            <!--<TextView
                android:id="@+id/lblPaypal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color2" />-->

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
